# ai-workforce-suitability

./: .gitignore  README.md  __init__.py  pyproject.toml
Ability Profiles/: Capability_profiles_all_items.ipynb
Annotated_Benchmarks/: README.md
Annotated_Benchmarks/AGIEval/: agieval_freeform_annotations.csv  agieval_task.py
Annotated_Benchmarks/Abstract_Narrative_Understanding/: __init__.py  abstract_narrartive_understanding_task.py  abstract_narrative_understanding_annotations.csv
Annotated_Benchmarks/BigBenchHard/: __init__.py  bigbenchhard_annotations.csv  bigbenchhard_task.py
Annotated_Benchmarks/BigToM/: __init__.py  bigtom_annotations.csv
Annotated_Benchmarks/Cause_and_Effect/: __init__.py  cause_and_effect_task.py
Annotated_Benchmarks/CoQA/: CoQA_task.py  README.md  __init__.py
Annotated_Benchmarks/Crow/: __init__.py  crow_intent.json  crow_stance.json  crow_task.py
Annotations/: Benchmark sampling allocations.ipynb  Benchmark_demand_profiles.ipynb  __init__.py  all_annotations_for_selected_items.csv  annotate_tasks.py  annotation_agent.py  convert_rubrics.py  item_allocations.json  rubric.json  run_annotations.py
Benchmark Demand Profiles/: Benchmark_demand_profiles.ipynb  selected_items_by_dataset.json
Capability Profiles/: Capability_profiles_all_items.ipynb  Capbility_profiles.md
Evaluations/: README.md  __init__.py
Suitability Scores/: Suitability_scores.md
Workforce Activity Demand Profiles/: Workforce activity demand profiles.md
Workforce Activity Intensity Profiles/: Workforce activity intensity profiles.md
(+169 files in other folders)
